src/objects/Reception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Advice_given__c</fullName>
        <label>Advice given</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_of_law__c</fullName>
        <label>Area of law</label>
        <picklist>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Solicitor relations/issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit &amp; Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing/Landlord &amp; Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration/refugee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negligence/Personal Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property/Interest in Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will/Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Breakdown_Area__c</fullName>
        <label>Breakdown of Area of law</label>
        <picklist>
            <controllingField>Area_of_law__c</controllingField>
            <picklistValues>
                <fullName>Tort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court proceedings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ward of Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deedpoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory performance/rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting up company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods &amp; services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communcaitons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Collection Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defendant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with gardai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrimination</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Details_of_query__c</fullName>
        <label>Details of query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <picklist>
            <picklistValues>
                <fullName>Jackie Heraty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacqueline Heffernan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorraine Walsh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marian Ward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mimi Goodman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to1__c</fullName>
        <label>Referred to</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC General Centre Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre General Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (LAB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Ombudsman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to2__c</fullName>
        <label>Referred to</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC General Centre Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre General Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (LAB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Ombudsman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to3__c</fullName>
        <label>Referred to</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC General Centre Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre General Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (LAB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Ombudsman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Area_of_law__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alltoday</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Area_of_law__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Calls Today</label>
    </listViews>
    <listViews>
        <fullName>Legal_Aid_as_Primary_Area</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Details_of_query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_of_law__c</field>
            <operation>equals</operation>
            <value>Legal Aid</value>
        </filters>
        <label>Legal Aid as Primary Area</label>
    </listViews>
    <nameField>
        <displayFormat>Recpt-{0000}-{MM}-{YYYY}</displayFormat>
        <label>Reception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>